[package]
name = "procespy"
version = "0.1.0"
authors = ["bishtpawan <pawan.bisht@knoldus.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.9.2"
lettre_email = "0.9.2"
subprocess = "0.1.18"
json = "0.12.0"
job_scheduler = "*"
log = "0.4.6"
env_logger = "0.5.12"
